# librespot-node

./: .gitignore  index.d.ts  index.js  package-lock.json  package.json  testDiscover.js
native/: Cargo.toml  index.d.ts
native/src/: lib.rs
native/src/lib/: discovery.rs  events.rs  player.rs
test_play/: Cargo.toml
test_play/src/: main.rs
