[package]
name = "librespot-node"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
name = "librespot_node"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librespot = "0.3.1"
tokio = "1.16.1"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
