[package]
name = "librespot-node"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
name = "librespot_node"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librespot = "0.3.1"
tokio = "1.16.1"
once_cell = "1.9.0"
sha1 = "0.10.0"
hex = "0.4.3"
futures = "0.3.21"
async-trait = "0.1.52"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "channel-api"]
